clusters/apps/chain-indexer/routes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ${APP_CHAIN_INDEXER_GRAPHQL_ROUTE}
  namespace: ${APP_CHAIN_INDEXER_NAMESPACE}
spec:
  parentRefs:
    - name: gateway
      namespace: ${PLATFORM_NAMESPACE}
      sectionName: web-https
  hostnames:
    - ${APP_CHAIN_INDEXER_HASURA_HOSTNAME}.${CLUSTER_ZONE}
  rules:
    - backendRefs:
        - name: ${APP_CHAIN_INDEXER_HASURA_SVC}
          port: ${APP_CHAIN_INDEXER_HASURA_PORT}

---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: hasura-chain-indexer-allowlist
  namespace: ${APP_CHAIN_INDEXER_NAMESPACE}
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: ${APP_CHAIN_INDEXER_GRAPHQL_ROUTE}
  authorization:
    defaultAction: Deny
    rules:
      - name: allowed-clients
        action: Allow
        principal:
          clientCIDRs: ${CHAIN_INDEXER_HASURA_ALLOWED_CIDRS}

---
apiVersion: gateway.networking.k8s.io/v1
kind: TLSRoute
metadata:
  name: ${APP_CHAIN_INDEXER_PG_ROUTE}
  namespace: ${APP_CHAIN_INDEXER_NAMESPACE}
spec:
  parentRefs:
    - name: gateway
      namespace: ${PLATFORM_NAMESPACE}
      sectionName: postgres-direct
  hostnames:
    - ${APP_CHAIN_INDEXER_PG_HOSTNAME}.${CLUSTER_ZONE}
  rules:
    - backendRefs:
        - name: ${APP_CHAIN_INDEXER_PG_POOLER}
          port: 5432
